--- a/css/main-layout.css
+++ b/css/main-layout.css
@@ -47,7 +47,7 @@
 /* Site Wrapper - Everything that isn't sidebarigation */
 .site-wrap {
   /* Critical position and size styles */
-  min-height: 100% !important;
+  min-height: 100vh !important;
   min-width: 100%;
   background-color: white; /* Needs a background or else the sidebar will show through */
   position: relative;
