--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -20,13 +20,15 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  background-color: white;
+  background-color: #646568;
   width: 100%;
   height: 3px;
   z-index: 13;
 }
 .progress{
-  background-color: #21252B;
+  background-color: #ee8e6b;
+  background-image: linear-gradient(315deg, #ee8e6b 0%, #ef6da0 74%);
+
   height: 4px;
   width: 0;
   transition: width 0.5s;
