--- a/css/main-layout.css
+++ b/css/main-layout.css
@@ -138,25 +138,36 @@ html, body { height: 100%; width: 100%;}
   position: absolute;
   top: 2.5rem;
   width: 10rem;
+  height: 9.9rem;
+  text-align: center;
+
+  display: grid;
+  grid-template-columns: 10rem;
+  grid-template-rows: 1fr 2rem;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 .info .text{
   width: 9rem;
   margin-left: auto;
   margin-right: auto;
   max-height: 8rem;
-  font-size: 0.7rem;
   overflow-y: auto;
+  min-height: 100%;
+  grid-area: 1 / 1 / 2 / 2;
+}
+.info .text *{
+  font-size: 0.8rem;
   word-wrap: break-word;
 }
-
-.personal-links{
+.personal-links{ grid-area: 2 / 1 / 3 / 2; }
+.personal-links *{
   padding-top: 0.3rem;
-  padding-left: 0.1rem;
+  margin: 1.5%;
   z-index: 1;
   text-decoration: none;
   list-style-type: none;
   list-style: none;
-  text-align: center;
 }
 .personal-links li{
   display: inline-block;
